--- a/index.html
+++ b/index.html
@@ -3,12 +3,103 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página da Rafinha</title>
-    <link rel="stylesheet" href="./style.css">   
+    <title>Meu Site Pessoal</title>
+    <style>
+        body {
+            font-family: Shadows Into Light , Raleway;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+            color: #8e0c0cc6;
+        }
+        header {
+            background-color: #8d0e0e;
+            color: white;
+            text-align: center;
+            padding: 20px 0;
+        }
+        header h1 {
+            margin: 0;
+            font-size: 36px;
+        }
+        .container {
+            width: 80%;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        .foto-perfil {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            border: 5px solid #a20101;
+            margin-top: 20px;
+        }
+        .sobre-mim {
+            margin-top: 20px;
+        }
+        .sobre-mim h2 {
+            color: #701616;
+        }
+        .sobre-mim p {
+            font-size: 1.5em;
+            line-height: 1.6;
+        }
+        footer {
+            text-align: center;
+            padding: 20px 0;
+            background-color: #333;
+            color: white;
+        }
+        footer a {
+            color: #fff;
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
+
+    <!-- Cabeçalho -->
     <header>
-        <img src ="./rafa.jpg" alt="blob:https://web.whatsapp.com/15732b61-06a4-497d-b1d8-655ed47469dc" width="300">
-        <h1>Rafinha</h1>
-        <p>Olá, eu sou a Rafinha! Sou uma estudante de programação e estou aprendendo a criar páginas web.</p>
+        <h1>Bem-vindo ao meu site pessoal!</h1>
     </header>
+
+    <!-- Conteúdo -->
+    <div class="container">
+        <div class="perfil">
+            <img src="rafa.jpg" alt="Foto de Perfil" class="foto-perfil"> <!-- Substitua 'sua-foto.jpg' pelo caminho da sua foto -->
+            <div class="sobre-mim">
+                <h2>Sobre Mim</h2>
+                <p>Oii,Eu sou Rafinha, gosto muito de ler e jogar qualquer tipo de jogo, namoro a 2 anos e estudo no sesi, tenho um sonho de trabalhar com o que eu quero e tenho ctz que vou conseguir, amo muito MPB e estilos musicais diversos, e é isso bjs!.</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Rodapé -->
+    <footer>
+        <p>&copy; 2025 Rafaella. Todos os direitos reservados.</p>
+        <p><a href="rafaellamonteiro555@gmail.com">Entre em contato comigo</a></p> <!-- Substitua pelo seu e-mail -->
+    </footer>
+
+
+    <!-- Tabela de Jogos -->
+    <table>
+        <caption>🎮 Jogos Favoritos</caption>
+        <tr>
+            <th>The last of us</th>
+            <th>steam</th>
+            <th>terror e suspense</th>
+        </tr>
+        <tr>
+            <td>The Witcher 3</td>
+            <td>PC / Console</td>
+            <td>RPG</td>
+        </tr>
+        <tr>
+            <td>Minecraft</td>
+            <td>Multiplataforma</td>
+            <td>Sandbox / Criativo</td>
+        </tr>
+    </table>
+</div>
+</body>
+</html>
